--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -2163,11 +2163,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l98-EA-UkV">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ow1-W7-eX4">
-                                        <rect key="frame" x="20" y="104" width="335" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gjN-cN-9KH">
                                         <rect key="frame" x="316" y="20" width="39" height="32"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -2178,10 +2173,28 @@
                                             <action selector="dismissView" destination="Lkr-6e-0Fb" eventType="touchUpInside" id="xJ4-oZ-Vjb"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AKb-vl-FVZ">
+                                        <rect key="frame" x="20" y="16" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="duY-xQ-sKd"/>
+                                            <constraint firstAttribute="width" secondItem="AKb-vl-FVZ" secondAttribute="height" multiplier="1:1" id="wXb-gC-nqm"/>
+                                        </constraints>
+                                        <state key="normal" image="cancel_icon"/>
+                                        <connections>
+                                            <action selector="cancelAction" destination="Lkr-6e-0Fb" eventType="touchUpInside" id="xRd-MT-gco"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ow1-W7-eX4">
+                                        <rect key="frame" x="20" y="104" width="335" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="AKb-vl-FVZ" firstAttribute="leading" secondItem="l98-EA-UkV" secondAttribute="leading" constant="20" id="9UM-4x-r8c"/>
                                     <constraint firstItem="gjN-cN-9KH" firstAttribute="top" secondItem="l98-EA-UkV" secondAttribute="top" constant="20" id="I8Q-QM-niI"/>
+                                    <constraint firstItem="AKb-vl-FVZ" firstAttribute="centerY" secondItem="gjN-cN-9KH" secondAttribute="centerY" id="e55-oL-oGH"/>
                                     <constraint firstAttribute="trailing" secondItem="gjN-cN-9KH" secondAttribute="trailing" constant="20" id="t7b-qa-f7b"/>
                                 </constraints>
                             </view>
@@ -2219,6 +2232,7 @@
         <image name="AddFile" width="24" height="24"/>
         <image name="app_loader_shape" width="40" height="40"/>
         <image name="backButtonNormalStateIcon" width="16" height="14"/>
+        <image name="cancel_icon" width="16" height="16"/>
         <image name="chat" width="20" height="21"/>
         <image name="close_conversation_icon" width="32" height="32"/>
         <image name="download_white" width="21" height="21"/>
