--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -1421,10 +1421,10 @@
             </objects>
             <point key="canvasLocation" x="3241" y="26"/>
         </scene>
-        <!--Search Agent View Controller-->
+        <!--Search Address Controller-->
         <scene sceneID="Qx1-fY-kaM">
             <objects>
-                <viewController storyboardIdentifier="SearchAgentViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6pB-c8-YAm" customClass="SearchAgentViewController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchAddressController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6pB-c8-YAm" customClass="SearchAddressController" customModule="Hippo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5BA-HN-pE7"/>
                         <viewControllerLayoutGuide type="bottom" id="d6M-On-rYc"/>
@@ -1451,7 +1451,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EFu-V6-IPR">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="60"/>
                                         <connections>
-                                            <action selector="action_BackBtn" destination="6pB-c8-YAm" eventType="touchUpInside" id="aZt-k4-Lpz"/>
+                                            <action selector="actionBack" destination="6pB-c8-YAm" eventType="touchUpInside" id="FQr-iq-YHE"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRn-p9-AWr">
@@ -1489,9 +1489,13 @@
                                     <constraint firstAttribute="height" constant="60" id="qoF-tK-9ab"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aC2-8l-e8V">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aC2-8l-e8V">
                                 <rect key="frame" x="0.0" y="60" width="375" height="607"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="6pB-c8-YAm" id="sq7-4Q-428"/>
+                                    <outlet property="delegate" destination="6pB-c8-YAm" id="531-qj-fgh"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1505,10 +1509,14 @@
                             <constraint firstItem="aC2-8l-e8V" firstAttribute="leading" secondItem="MgY-r2-Bom" secondAttribute="leading" id="tNb-xL-eIh"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="aC2-8l-e8V" id="269-oK-jYL"/>
+                        <outlet property="textField" destination="T1S-Pr-R7f" id="45S-eO-icB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8YK-oc-1Rf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4000.8000000000002" y="-146.17691154422789"/>
+            <point key="canvasLocation" x="4006" y="18"/>
         </scene>
         <!--Level View Controller-->
         <scene sceneID="GfF-z1-9Zj">
@@ -2248,7 +2256,51 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ED5-yR-xRQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3080.8000000000002" y="1736.5817091454273"/>
+            <point key="canvasLocation" x="3036" y="1707"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="MGj-Ka-tL6">
+            <objects>
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="L4X-Ke-nuy" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jfv-Qw-cvC"/>
+                        <viewControllerLayoutGuide type="bottom" id="y8S-1G-rDX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="G4Z-Uv-kNs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="avJ-HA-mie" customClass="NavigationBar" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="X3q-k8-TQD"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PpA-9l-Bke">
+                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="avJ-HA-mie" secondAttribute="trailing" id="0As-5t-qTh"/>
+                            <constraint firstItem="PpA-9l-Bke" firstAttribute="leading" secondItem="G4Z-Uv-kNs" secondAttribute="leading" id="QDV-se-1On"/>
+                            <constraint firstItem="avJ-HA-mie" firstAttribute="top" secondItem="G4Z-Uv-kNs" secondAttribute="top" id="UG1-rY-Zr9"/>
+                            <constraint firstItem="y8S-1G-rDX" firstAttribute="top" secondItem="PpA-9l-Bke" secondAttribute="bottom" id="Zj2-eg-Jhy"/>
+                            <constraint firstItem="PpA-9l-Bke" firstAttribute="top" secondItem="avJ-HA-mie" secondAttribute="bottom" id="tFL-Vm-gS1"/>
+                            <constraint firstAttribute="trailing" secondItem="PpA-9l-Bke" secondAttribute="trailing" id="taz-Dl-Pk8"/>
+                            <constraint firstItem="avJ-HA-mie" firstAttribute="leading" secondItem="G4Z-Uv-kNs" secondAttribute="leading" id="zAC-Tp-i8p"/>
+                        </constraints>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="PpA-9l-Bke" id="G96-Dm-AbB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vAL-ZL-8W3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1461.5999999999999" y="2486.8065967016491"/>
         </scene>
     </scenes>
     <resources>
